* Change: Vertical alert bars can now be toggled on/off, leaving just the horizontal bars.
* Note: You can have full 4 sides alerts by enabling both Horizontal and Vertical alert bars.

Infernal Dawn
* Warboss Drak
** New: Added a buff remove trigger for Burning Sacrifice in the Mechanic Spy.
** Change: The alert for Death Blow is now flagged as important.
* Maklamos the Scryer
** New: Added appropriate Phase changes for when each add Activates.
** New: Added personal screen alert for Azure Crystal (Blue)
** New: Added personal screen alert for Emerald Crystal (Green)
** New: Added personal screen alert for Scarlet Crystal (Red)
** New: Added buff remove triggers for Blue, Green and Red debuff alerts.
** New: Added Mechanic Spy monitors for Blue, Green and Red debuffs.
** New: Added Tank-Swap support for Fractured Nature.
** New: Added Mechanic Spy for orb intercept debuff, Crystalline Distortion.
** New: Added personal screen alert for orb intercept debuff, Crystalline Distortion.

----
v1.0.2

System
* Boss Matching
** Change: Bosses with Known UID's will now be checked before the old Name methods to avoid overlapping bosses.

Event System
* Initiation
** Fixed: Units available on loading or after a /reloadui were not being sent to the message queue.
* Marks
** New: Now tracks changes in Marked targets. Also attempts to track mark changes in unavailable Units via damage and heal events.
* Casting
** New: Event for when a castbar becomes visible.
** New: Event for when a castbar is hidden.

Alerts
* New: Horizontal alert bars along the Top and Bottom of the screen. (optional)
* Change: Vertical alert bars can now be toggled on/off, leaving just the horizontal bars.
* Note: You can have full 4 sides alerts by enabling both Horizontal and Vertical alert bars.

Trigger System
* New: Personal Cast triggers are now available to boss mods. These will only trigger if the players target or focus is the current unit casting.