@@ -97,6 +97,7 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Version = {}
 	KBM.Language.Version.Title = KBM.Language:Add("You are running:")
 	KBM.Language.Version.Title:SetFrench("Vous exécuter ceci:")
+	KBM.Language.Version.Title:SetGerman("Du benutzt:")
 	
 	-- Command Listings
 	KBM.Language.Command = {}
@@ -114,6 +115,7 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Command.Reset:SetFrench("/kbmreset – Réanitialiser le combat en cours.")
 	KBM.Language.Command.Version = KBM.Language:Add("/kbmversion -- Displays the current version.")
 	KBM.Language.Command.Version:SetFrench("/kbmversion - Afficher la version courante.")
+	KBM.Language.Command.Version:SetGerman("/kbmversion - Zeigt die aktuelle Version an.")
 	KBM.Language.Command.Options = KBM.Language:Add("/kbmoptions -- Toggles the GUI Options screen.")
 	KBM.Language.Command.Options:SetGerman("/kbmoptions -- Blendet das Konfigurations-Fenster ein und aus.")
 	KBM.Language.Command.Options:SetFrench("/kbmoptions – Afficher l’écran de configuration de KBM.")
@@ -452,7 +454,9 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.AlertText:SetFrench("Texte Avertissement Alerte activé")
 	KBM.Language.Options.AlertText:SetRussian("Текст предупреждения разрешен")
 	KBM.Language.Options.AlertVert = KBM.Language:Add("Enable vertical alert bars")
+	KBM.Language.Options.AlertVertShort = KBM.Language:Add("Vertical bars")
 	KBM.Language.Options.AlertHorz = KBM.Language:Add("Enable horizontal alert bars")
+	KBM.Language.Options.AlertHorzShort = KBM.Language:Add("Horizontal bars")
 	KBM.Language.Options.UnlockFlash = KBM.Language:Add("Unlock alert border for scaling")
 	KBM.Language.Options.UnlockFlash:SetGerman("Alarmierungs Ränder sind änderbar.")
 	KBM.Language.Options.UnlockFlash:SetRussian("Разблокировать рамку предупреждения")
@@ -521,7 +525,6 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.Character:SetGerman("Einstellungen nur für diesen Charakter speichern")
 	KBM.Language.Options.Character:SetFrench("Sauvegarder paramètre pour ce personnage uniquement")
 	KBM.Language.Options.Character:SetRussian("Сохранить настройки только для этого персонажа")
-	KBM.Language.Options.Character.French = "Sauvegarder configuration pour ce personnage uniquement"
 	KBM.Language.Options.ModEnabled = KBM.Language:Add("Enable King Boss Mods v"..KBMLM.KBMAddonData.toc.Version)
 	KBM.Language.Options.ModEnabled:SetGerman("Aktiviere King Boss Mods v"..KBMLM.KBMAddonData.toc.Version)
 	KBM.Language.Options.ModEnabled:SetRussian("Активировать King Boss Mods v"..KBMLM.KBMAddonData.toc.Version)
